# amazon-seller-dashboard

./: .env.example  .gitignore  README.md  dashboard_ui.html  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: api-agent.md  optimizer-agent.md
.claude/rules/: amazon-api.md  python.md
.claude/skills/: check-status.md  fetch-report.md  run-optimization.md
app/: config.py
app/api/: base.py  reports.py
app/auth/: amazon_oauth.py
app/engine/: bid_calculator.py  harvester.py  optimizer.py
app/models/: schemas.py
app/routers/: dashboard.py  health.py
tests/: test_dashboard.py  test_optimizer.py  test_reports.py
