[project]
name = "amazon-seller-dashboard"
version = "0.1.0"
description = "Amazon Sponsored Products ROAS 자동 최적화 대시보드"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
